--- a/style.css
+++ b/style.css
@@ -113,6 +113,72 @@ span {
     }
 }
 
+.ribbonn:after,
+.ribbonn:before {
+    margin-top: 0.5em;
+    content: "";
+    display: flex;
+    ;
+    border: 1.5em solid #fff;
+}
+
+.ribbonn:after {
+    border-right-color: transparent;
+}
+
+.ribbonn:before {
+    border-left-color: transparent;
+}
+
+.ribbonn a:link,
+.ribbonn a:visited {
+    color: #000;
+    text-decoration: none;
+    height: 3.5em;
+    overflow: hidden;
+}
+
+.ribbonn span {
+    background: #fff;
+    display: inline-block;
+    line-height: 3em;
+    padding: 0 1.5em;
+    margin-top: 0.5em;
+    position: relative;
+    -webkit-transition: background-color 0.2s, margin-top 0.2s;
+    /* Saf3.2+, Chrome */
+    -moz-transition: background-color 0.2s, margin-top 0.2s;
+    /* FF4+ */
+    -ms-transition: background-color 0.2s, margin-top 0.2s;
+    /* IE10 */
+    -o-transition: background-color 0.2s, margin-top 0.2s;
+    /* Opera 10.5+ */
+    transition: background-color 0.2s, margin-top 0.2s;
+}
+
+.ribbonn a:hover span {
+    background: #FFD204;
+    margin-top: 0;
+}
+
+.ribbonn span:before {
+    content: "";
+    position: absolute;
+    top: 3em;
+    left: 0;
+    border-right: 0.5em solid #9B8651;
+    border-bottom: 0.5em solid #fff;
+}
+
+.ribbonn span:after {
+    content: "";
+    position: absolute;
+    top: 3em;
+    right: 0;
+    border-left: 0.5em solid #9B8651;
+    border-bottom: 0.5em solid #fff;
+}
+
 .ribbon {
     display: flex;
     justify-content: center;
@@ -122,71 +188,6 @@ span {
     margin: auto;
 }
 
-.ribbon:after,
-.ribbon:before {
-    margin-top: 0.5em;
-    content: "";
-    display: flex;
-    ;
-    border: 1.5em solid #fff;
-}
-
-.ribbon:after {
-    border-right-color: transparent;
-}
-
-.ribbon:before {
-    border-left-color: transparent;
-}
-
-.ribbon a:link,
-.ribbon a:visited {
-    color: #000;
-    text-decoration: none;
-    height: 3.5em;
-    overflow: hidden;
-}
-
-.ribbon span {
-    background: #fff;
-    display: inline-block;
-    line-height: 3em;
-    padding: 0 1.5em;
-    margin-top: 0.5em;
-    position: relative;
-    -webkit-transition: background-color 0.2s, margin-top 0.2s;
-    /* Saf3.2+, Chrome */
-    -moz-transition: background-color 0.2s, margin-top 0.2s;
-    /* FF4+ */
-    -ms-transition: background-color 0.2s, margin-top 0.2s;
-    /* IE10 */
-    -o-transition: background-color 0.2s, margin-top 0.2s;
-    /* Opera 10.5+ */
-    transition: background-color 0.2s, margin-top 0.2s;
-}
-
-.ribbon a:hover span {
-    background: #FFD204;
-    margin-top: 0;
-}
-
-.ribbon span:before {
-    content: "";
-    position: absolute;
-    top: 3em;
-    left: 0;
-    border-right: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
-
-.ribbon span:after {
-    content: "";
-    position: absolute;
-    top: 3em;
-    right: 0;
-    border-left: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
 .ribbon1 {
     display: flex;
     justify-content: center;
@@ -196,71 +197,6 @@ span {
     margin: auto;
 }
 
-.ribbon1:after,
-.ribbon1:before {
-    margin-top: 0.5em;
-    content: "";
-    display: flex;
-    ;
-    border: 1.5em solid #fff;
-}
-
-.ribbon1:after {
-    border-right-color: transparent;
-}
-
-.ribbon1:before {
-    border-left-color: transparent;
-}
-
-.ribbon1 a:link,
-.ribbon1 a:visited {
-    color: #000;
-    text-decoration: none;
-    height: 3.5em;
-    overflow: hidden;
-}
-
-.ribbon1 span {
-    background: #fff;
-    display: inline-block;
-    line-height: 3em;
-    padding: 0 1.5em;
-    margin-top: 0.5em;
-    position: relative;
-    -webkit-transition: background-color 0.2s, margin-top 0.2s;
-    /* Saf3.2+, Chrome */
-    -moz-transition: background-color 0.2s, margin-top 0.2s;
-    /* FF4+ */
-    -ms-transition: background-color 0.2s, margin-top 0.2s;
-    /* IE10 */
-    -o-transition: background-color 0.2s, margin-top 0.2s;
-    /* Opera 10.5+ */
-    transition: background-color 0.2s, margin-top 0.2s;
-}
-
-.ribbon1 a:hover span {
-    background: #FFD204;
-    margin-top: 0;
-}
-
-.ribbon1 span:before {
-    content: "";
-    position: absolute;
-    top: 3em;
-    left: 0;
-    border-right: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
-
-.ribbon1 span:after {
-    content: "";
-    position: absolute;
-    top: 3em;
-    right: 0;
-    border-left: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
 .ribbon2 {
     display: flex;
     justify-content: center;
@@ -270,71 +206,6 @@ span {
     margin: auto;
 }
 
-.ribbon2:after,
-.ribbon2:before {
-    margin-top: 0.5em;
-    content: "";
-    display: flex;
-    ;
-    border: 1.5em solid #fff;
-}
-
-.ribbon2:after {
-    border-right-color: transparent;
-}
-
-.ribbon2:before {
-    border-left-color: transparent;
-}
-
-.ribbon2 a:link,
-.ribbon2 a:visited {
-    color: #000;
-    text-decoration: none;
-    height: 3.5em;
-    overflow: hidden;
-}
-
-.ribbon2 span {
-    background: #fff;
-    display: inline-block;
-    line-height: 3em;
-    padding: 0 1.5em;
-    margin-top: 0.5em;
-    position: relative;
-    -webkit-transition: background-color 0.2s, margin-top 0.2s;
-    /* Saf3.2+, Chrome */
-    -moz-transition: background-color 0.2s, margin-top 0.2s;
-    /* FF4+ */
-    -ms-transition: background-color 0.2s, margin-top 0.2s;
-    /* IE10 */
-    -o-transition: background-color 0.2s, margin-top 0.2s;
-    /* Opera 10.5+ */
-    transition: background-color 0.2s, margin-top 0.2s;
-}
-
-.ribbon2 a:hover span {
-    background: #FFD204;
-    margin-top: 0;
-}
-
-.ribbon2 span:before {
-    content: "";
-    position: absolute;
-    top: 3em;
-    left: 0;
-    border-right: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
-
-.ribbon2 span:after {
-    content: "";
-    position: absolute;
-    top: 3em;
-    right: 0;
-    border-left: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
 .ribbon3 {
     display: flex;
     justify-content: center;
@@ -344,70 +215,13 @@ span {
     margin: auto;
 }
 
-.ribbon3:after,
-.ribbon3:before {
-    margin-top: 0.5em;
-    content: "";
+.ribbon4 {
     display: flex;
-    ;
-    border: 1.5em solid #fff;
-}
-
-.ribbon3:after {
-    border-right-color: transparent;
-}
-
-.ribbon3:before {
-    border-left-color: transparent;
-}
-
-.ribbon3 a:link,
-.ribbon3 a:visited {
-    color: #000;
-    text-decoration: none;
-    height: 3.5em;
-    overflow: hidden;
-}
-
-.ribbon3 span {
-    background: #fff;
-    display: inline-block;
-    line-height: 3em;
-    padding: 0 1.5em;
-    margin-top: 0.5em;
-    position: relative;
-    -webkit-transition: background-color 0.2s, margin-top 0.2s;
-    /* Saf3.2+, Chrome */
-    -moz-transition: background-color 0.2s, margin-top 0.2s;
-    /* FF4+ */
-    -ms-transition: background-color 0.2s, margin-top 0.2s;
-    /* IE10 */
-    -o-transition: background-color 0.2s, margin-top 0.2s;
-    /* Opera 10.5+ */
-    transition: background-color 0.2s, margin-top 0.2s;
-}
-
-.ribbon3 a:hover span {
-    background: #FFD204;
-    margin-top: 0;
-}
-
-.ribbon3 span:before {
-    content: "";
+    justify-content: center;
     position: absolute;
-    top: 3em;
-    left: 0;
-    border-right: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
-}
-
-.ribbon3 span:after {
-    content: "";
-    position: absolute;
-    top: 3em;
-    right: 0;
-    border-left: 0.5em solid #9B8651;
-    border-bottom: 0.5em solid #fff;
+    right: 150px;
+    top: 250px;
+    margin: auto;
 }
 .introduce {
     display: flex;
