--- a/style.css
+++ b/style.css
@@ -231,12 +231,28 @@ span {
     top: 300px;
     margin: auto;
 }
-.ribbon8 {
+.ribbon6 {
     display: flex;
     justify-content: center;
     position: absolute;
     right: 150px;
     top: 350px;
+    margin: auto;
+}
+.ribbon7 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 150px;
+    top: 400px;
+    margin: auto;
+}
+.ribbon8 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 150px;
+    top: 450px;
     margin: auto;
 }
 .introduce {
